FIX: 非シアタービュー時のz-indexを修正

--- a/components/PMWatch/styleModules/PlayerUI/player.styl
+++ b/components/PMWatch/styleModules/PlayerUI/player.styl
@@ -179,7 +179,7 @@
         align-items: center;
         overflow: hidden;
         background: var(--bgcolor1);
-        z-index: 10;
+        z-index: 200;
         border: none;
         border-radius: 0;
     }
